removed the csv and added json, need to to update the file creation and define json structure

--- a/MauiApp2/DailyDataEntryApp.csproj
+++ b/MauiApp2/DailyDataEntryApp.csproj
@@ -95,10 +95,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="DataEntryPage.xaml">
+	  <MauiXaml Update="UI\DataEntryPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="DownloadPage.xaml">
+	  <MauiXaml Update="UI\DownloadPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
